<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/textBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/tambahkan_cerita"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edt_cerita"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_height="240dp"
        android:hint="@string/ceritakan_pengalaman_menarik_kamu"
        android:gravity="top"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/img_thumbnail"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintEnd_toEndOf="@+id/edt_cerita"
        app:layout_constraintStart_toStartOf="@+id/edt_cerita"
        app:layout_constraintTop_toBottomOf="@+id/edt_cerita"
        android:contentDescription="@string/image_thumbnail" />

    <TextView
        android:id="@+id/textView3"
        style="@style/textMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/klik_di_atas_untuk_mengupload_gambar"
        app:layout_constraintEnd_toEndOf="@+id/img_thumbnail"
        app:layout_constraintStart_toStartOf="@+id/img_thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/img_thumbnail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit_cerita"
        style="@style/btnBlue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ProgressBar
        android:id="@+id/pb_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.093" />


</androidx.constraintlayout.widget.ConstraintLayout>