<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TextView
        android:id="@+id/textView2"
        style="@style/textMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_writer_nsilakan_login_untuk_melanjutkan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="0dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:paddingStart="16dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/nama"
        android:textSize="14sp"
        android:textColor="@color/textHeadline"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/bg_edittext"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:paddingStart="16dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/email_gmail_com"
        android:textSize="14sp"
        android:textColor="@color/textHeadline"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nama" />

    <com.kls.mystoryapps.utils.CustomEditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:textColor="@color/textHeadline"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <Button
        android:id="@+id/btn_submit_login"
        style="@style/btnBlue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit_login"
        app:layout_constraintVertical_bias="0.082" />

</androidx.constraintlayout.widget.ConstraintLayout>